Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14096

CMD FOR with /d and Tilde functions shows uppercase incorrectly

    XMLWordPrintable

Details

    Description

      The cmd:batch winetest shows failures with many tests because of a syntax like this:

      for /d %%i in (.) do set WINE_CURDIR=%%~dpnxi

      Currently some directories are changed to uppercase and this causes some tests to fail. The attached patch is an attempt to fix these failures. hbelusca, could you get us a tesbot run for this? Thanks.

      Attachments

        1. cmd_c.patch
          0.6 kB
        2. cmd_winetest_new.png
          cmd_winetest_new.png
          104 kB
        3. cmd_winetest_old.png
          cmd_winetest_old.png
          100 kB
        4. ReactOS_For_DIR_Examples.png
          ReactOS_For_DIR_Examples.png
          20 kB
        5. W2K3_cmd_winetest.png
          W2K3_cmd_winetest.png
          132 kB
        6. WinXP_For_DIR_Examples.png
          WinXP_For_DIR_Examples.png
          15 kB

        Issue Links

          Activity

            People

              hbelusca hbelusca
              DougLyons DougLyons
              Votes:
              3 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: